--- a/kolproxy.cabal
+++ b/kolproxy.cabal
@@ -16,28 +16,30 @@ cabal-version:  >= 1.2
 executable kolproxy
   build-depends:
     base,
-    base64-bytestring >= 0.1 && < 0.2,
-    bytestring >= 0.9 && < 0.10,
-    bzlib >= 0.5 && < 0.6,
-    cgi >= 3001.1 && < 3001.2,
-    containers >= 0.4 && < 0.5,
-    directory >= 1.1 && < 1.2,
-    filepath >= 1.3 && < 1.4,
-    json >= 0.5 && < 0.8,
-    network >= 2.3 && < 2.4,
-    process >= 1.1 && < 1.2,
-    pureMD5 >= 2.1 && < 2.2,
-    random >= 1.0 && < 1.1,
-    regex-tdfa >= 1.1 && < 1.2,
-    time >= 1.4 && < 1.5,
-    unix >= 2.5 && < 2.6,
-    xml >= 1.3 && < 1.4,
-    zlib >= 0.5 && < 0.6,
-    HTTP == 4000.2.3,
-    cryptocipher == 0.2.5,
-    tls == 0.6.2,
-    tls-extra == 0.2.1,
-    cprng-aes == 0.2.3
+    base64-bytestring,
+    bytestring,
+    bzlib,
+    cgi,
+    containers,
+    directory,
+    filepath,
+    json,
+    network,
+    process,
+    pureMD5,
+    random,
+    regex-tdfa,
+    time,
+    unix,
+    xml,
+    zlib,
+    HTTP,
+    cryptocipher,
+    tls,
+    tls-extra,
+    cprng-aes,
+    utf8-string,
+    network-uri
   c-sources:
     Scripting/lapi.c Scripting/lauxlib.c Scripting/lbaselib.c Scripting/lcode.c
     Scripting/ldblib.c Scripting/ldebug.c Scripting/ldo.c Scripting/ldump.c
